# Battleship

./: .deepsource.toml  .gitignore  CMakeLists.txt  Dockerfile  README.md  makefile
.github/workflows/: c-cpp.yml  codeql.yml
scenarios/: format3.txt
script/: newline.sh
src/: ai.c  ai.h  board.c  board.h  bomb.c  bomb.h  common.h  const.h  game.c  game.h  init.c  init.h  io.c  io.h  main.c  main.h  player.c  player.h  ship.c  ship.h  struct.h  tile.c  tile.h
src/libs/: linked_list.c  linked_list.h  stdprof.c  stdprof.h
src/scenarios/: format3.txt
src/test/: format3.txt  test_board.c  test_board.h  test_handler.c  test_handler.h  test_io.c  test_io.h  test_parser.c  test_parser.h  test_ship.c  test_ship.h
src/utils/: config.h  const.h  parser.c  parser.h  utils.c  utils.h
